themes/artmaps/style.css
/* ... */
.artmaps-map-object-list-container-page-current span:hover {
    cursor: pointer;
    color: blue;
}

#artmaps-filter-menu input:hover,
#artmaps-filter-menu label:hover {
    cursor: pointer;
}

.widget-area .widget h3 {
    margin-bottom: 0px;
}

.widget-area .widget {
    margin-bottom: 24px;
}

html, body {
  height:100%;
  width:100%;
  max-height:100%;
  max-width:100%;
  position: relative;
}

.loading-indicator {
  color: #fff;
  left: 4% !important;
  top: 120px !important;
  z-index: 9999 !important;
  background:url('images/loading.gif') left center no-repeat;
  padding-left: 23px;
  font-family: TateNewRegular;
  font-size: 16px;
  position: absolute;
  text-shadow: 0px 1px 2px rgba(0,0,0,0.4);
  -webkit-transition: opacity 0.2s linear;
}

header {
  top: 25px;
  margin: 0 auto;
  z-index: 999999;
  display: block;
  width: 92%;
  position: relative;
}

header .logo {
  float:left;
  margin-right:30px;
  margin-top:23px;
}

header .menu {
  float:left;
  margin-top:40px;
  font-family:TateNewRegular, Arial, Helvetica, sans-serif;
}

header .menu li {
  display: inline;
}

header .menu li.log-in, header .menu li.log-out {
  float: left;
  margin-top: -17px;
  color: #fff;
  line-height: 35px;
  white-space: nowrap;
}

header .menu li.log-in a, header .menu li.log-out a {
  margin-top: 0px;
  margin-right: 0px;
  border: 1px solid rgba(255,255,255,0.4);
  box-shadow:inset 0px -2px 0px rgba(255,255,255,0.4);
  display: block;
  text-transform: uppercase;
  font-size: 15px;
  padding: 0px 25px;
  text-align: center;
  text-decoration: none;
  border-radius: 2px;
  float:left;
}

header .menu li.log-out img.avatar {
  width: 35px;
  height: 35px;
  border-radius: 35px;
  margin-right: 10px;
  background: rgba(255,255,255,0.5);
  padding:1px;
  float:left;
}

header .menu li.log-out .logged-in-username {
  float:left;
  margin-right: 15px;
}

header .menu a {
  color:#fff;
  font-size:18px;
  margin-right:20px;
}

body:after {
  box-shadow: 0px 0px 150px 100px rgba(0,0,0,0.55);
  position:absolute;
  top:-1px;
  left:0px;
  right:0px;
  height:0px;
  z-index:0;
  content:" ";
}

body:before {
  box-shadow: 0px 0px 100px 20px rgba(0,0,0,0.55);
  position:absolute;
  left:0px;
  right:0px;
  height:0px;
  bottom: -1px;
  z-index: 99;
  content:" ";
}

#artmaps-map-autocomplete {
  position: absolute !important;
  top: 20px;
  bottom: auto !important;
  padding: 10px;
  font-size: 15px;
  text-transform: uppercase;
  box-sizing:border-box;
  right: 0px !important;
  background:#fff url('images/search-icon.png') 10px center no-repeat;
  padding-left:40px;
  width: 34%;
  border-radius:2px;
  z-index: 99;
  font-family:TateNewRegular, Arial, Helvetica, sans-serif;
  border: none;
}

/* Fade out Google Maps controls when in a lightbox */
.fancybox-lock .gmnoprint {
  opacity: 0;
  -webkit-transition: opacity 0.5s linear;
}

.fancybox-lock .fancybox-overlay .gmnoprint {
  opacity: 1;
  -webkit-transition: opacity 0.2s linear;
}

.pac-container {
  box-shadow: 0px 5px 13px rgba(0,0,0,0.4);
  z-index:99999 !important;
}

#artmaps-filter-menu {
  position: absolute !important;
  bottom: 20px !important;
  top: auto !important;
  background: none;
  text-align: right;
  left: auto !important;
  float: right;
  right: 4%;
  border: none;
  border-radius: 2px;
  font-family: TateNewRegular, Arial, Helvetica, sans-serif;
  -webkit-appearance: none;
  padding: 0px;
  font-size: 13px;
  line-height: 25px;
  text-shadow: 0px 0px 2px rgba(0,0,0,0.5), 0px 2px 4px rgba(0,0,0,0.8);
  color: #fff;
  width: auto !important;
}

#artmaps-filter-menu:before {
  content:"25BE";
}

#artmaps-filter-menu:hover {
  opacity:1;
}

#artmaps-filter-menu h2 {
  font-size: 13px;
  letter-spacing: -1px;
  text-transform: uppercase;
  color: #fff;
  background: #009279;
  border-bottom: 1px solid #ddd;
  padding: 8px;
  display: none;
}

#artmaps-filter-menu label {
  display: block;
  padding: 5px 35px 5px 8px;
  font-size: 12px;
  line-height: 18px;
  position: relative;
  border-bottom: 1px solid #DDD;
}

#artmaps-filter-menu label:last-of-type {
  border-bottom:none;
}

#artmaps-filter-menu input {
  position: absolute;
  right: 0px;
  left: 0px;
  bottom: 0px;
  top: 0px;
  opacity:0.1;
}

.about-page {
  background: #fff;
  height: 100%;
  margin: auto;
  padding: 40px 40px 40px 340px;
  box-sizing: border-box;
  overflow: auto;
}

.about-page h2 {
  border-bottom: 1px solid #ccc;
  padding-bottom: 15px;
  font-size: 28px;
  font-family: 'TateNewRegular',sans-serif;
  margin-bottom: 20px;
}

.about-page p {
  font-size: 14px;
  font-family: sans-serif;
  line-height: 20px;
  margin-bottom: 15px;
  margin-right:50px;
}

#loginform input {
  display: block;
  font-size: 15px;
  padding: 10px;
  border: 1px solid #BBB;
  border-radius: 2px;
  box-shadow: inset 0px 3px 3px -1px rgba(0,0,0,0.15);
  font-family: sans-serif;
}

#loginform #rememberme {
  float: left;
  position: relative;
  margin-right: 10px;
  bottom: -1px;
}

#loginform #wp-submit {
  padding: 10px 13px;
  box-shadow: none;
  border:none;
  font-weight: bold;
  font-family: TateNewRegular;
  font-size: 16px;
  background:#46c3d3;
  color:#fff;
  border-radius:4px;
}

#wpadminbar {
  background: rgba(70, 70, 70, 0.7) !important;
}

#wpadminbar .ab-top-secondary {
  background: none !important;
}

.artwork-results .mini-loading-indicator {
  position:absolute;
  top:0px !important;
  left:0px  !important;
  right:0px  !important;
  bottom:0px  !important;
  width:100%;
  height:100%;
  z-index:999999;
  background:url('images/loading.gif') left center no-repeat;
  display:block;
}

.artwork-results {
  position: absolute;
  border-radius:2px;
  top: 95px !important;
  padding:0 !important;
  right: 4% !important;
  left: auto !important;
  bottom:20px !important;
  width: 31% !important;
  border: none !important;
  background: rgba(255,255,255,0.85) !important;
  z-index: 99999 !important;
}
/* ... */

